src/test/deca/syntax/invalid/intermediaire2/wrongValue/05underFloatNeg.deca
// Description:
//    Programme initialisant une variable float négative avec une valeur causant un underflow
//
// Resultats:
//    05underFloatNeg.lis
//
// Historique:
//    cree le 17/06/2022
{
    float x = -1.0E-46;
}